--- a/jupyterhub/values.yaml
+++ b/jupyterhub/values.yaml
@@ -322,6 +322,7 @@ singleuser:
       tag: "set-by-chartpress"
       pullPolicy:
       pullSecrets: []
+    resources: {}
   cloudMetadata:
     # block set to true will append a privileged initContainer using the
     # iptables to block the sensitive metadata server at the provided ip.
