--- a/jupyterhub/values.yaml
+++ b/jupyterhub/values.yaml
@@ -387,7 +387,7 @@ singleuser:
   extraResource:
     limits: {}
     guarantees: {}
-  cmd: jupyterhub-singleuser
+  cmd:
   defaultUrl:
   extraPodConfig: {}
   profileList: []
