--- a/dev-config-local-chart-extra-config.yaml
+++ b/dev-config-local-chart-extra-config.yaml
@@ -25,8 +25,9 @@ hub:
 
 singleuser:
   # FIXME: move resources to dev-config.yaml after 2.0.0 is released.
-  egressAllowRules:
-    nonPrivateIPs: false
+  networkPolicy:
+    egressAllowRules:
+      nonPrivateIPs: false
   networkTools:
     # FIXME: move resources to dev-config.yaml after 2.0.0 is released.
     resources:
