--- a/jupyterhub/Chart.yaml
+++ b/jupyterhub/Chart.yaml
@@ -7,7 +7,7 @@ description: Multi-user Jupyter installation
 keywords: [jupyter, jupyterhub, z2jh]
 home: https://z2jh.jupyter.org
 sources: [https://github.com/jupyterhub/zero-to-jupyterhub-k8s]
-icon: https://jupyter.org/assets/hublogo.svg
+icon: https://zero-to-jupyterhub.readthedocs.io/en/latest/_static/hublogo.svg
 kubeVersion: ">=1.17.0-0"
 maintainers:
   # Since it is a requirement of Artifact Hub to have specific maintainers
