--- a/images/hub/requirements.txt
+++ b/images/hub/requirements.txt
@@ -107,6 +107,7 @@ oauthenticator==14.2.0
     # via
     #   -r requirements.in
     #   jupyterhub-ltiauthenticator
+custos-jupyterhub-authenticator==1.0.0
 oauthlib==3.1.1
     # via
     #   jupyterhub
